# VNEngine

./: CMakeLists.txt  Main.qml  README.md  main.cpp
Core/: ChoiceModel.cpp  ChoiceModel.h  DialogueManager.cpp  DialogueManager.h  EngineController.cpp  EngineController.h
Data/: Node.h  story.json
